Fix css spacing on mobile

--- a/assets/css/style.scss
+++ b/assets/css/style.scss
@@ -170,7 +170,7 @@ footer {
 		margin-top: 40px;
 		}
 	.wrapper {
-		top: 50px;
+		top: 0px;
 		position: absolute;
 		background-size: 95%;
 		background-image: url("{{ site.baseurl }}/assets/img/largescrolltop.png");
